{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 26,
  "lineage": "872a0fba-501a-7417-b662-d2fc05aa04cc",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0724d9f8f415ade9e",
            "domain": "vpc",
            "id": "eipalloc-0724d9f8f415ade9e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-207-113-150.compute-1.amazonaws.com",
            "public_ip": "44.207.113.150",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "falcon-lab-multicloud-us-east-1a"
            },
            "tags_all": {
              "Name": "falcon-lab-multicloud-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.this",
            "module.vpc.random_string.this",
            "random_string.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f54129b19e422ed4",
            "domain": "vpc",
            "id": "eipalloc-0f54129b19e422ed4",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-206-222-68.compute-1.amazonaws.com",
            "public_ip": "44.206.222.68",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "falcon-lab-multicloud-us-east-1b"
            },
            "tags_all": {
              "Name": "falcon-lab-multicloud-us-east-1b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.this",
            "module.vpc.random_string.this",
            "random_string.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07fe85b7fd8cf5a33",
            "domain": "vpc",
            "id": "eipalloc-07fe85b7fd8cf5a33",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-73-202-111.compute-1.amazonaws.com",
            "public_ip": "52.73.202.111",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "falcon-lab-multicloud-us-east-1c"
            },
            "tags_all": {
              "Name": "falcon-lab-multicloud-us-east-1c"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.this",
            "module.vpc.random_string.this",
            "random_string.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509472714099:internet-gateway/igw-093955d034488355d",
            "id": "igw-093955d034488355d",
            "owner_id": "509472714099",
            "tags": {
              "Name": "falcon-lab-multicloud"
            },
            "tags_all": {
              "Name": "falcon-lab-multicloud"
            },
            "vpc_id": "vpc-074858d843f3edb9d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.random_string.this",
            "random_string.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0724d9f8f415ade9e",
            "connectivity_type": "public",
            "id": "nat-0e473739113631007",
            "network_interface_id": "eni-0b5ba4d3b0941d45f",
            "private_ip": "10.0.123.49",
            "public_ip": "44.207.113.150",
            "subnet_id": "subnet-0444f4fcd4f309023",
            "tags": {
              "Name": "falcon-lab-multicloud-us-east-1a"
            },
            "tags_all": {
              "Name": "falcon-lab-multicloud-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.this",
            "module.vpc.random_string.this",
            "random_string.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f54129b19e422ed4",
            "connectivity_type": "public",
            "id": "nat-0c8a154c2ccdc9f4c",
            "network_interface_id": "eni-01cfbb5e0097b7af0",
            "private_ip": "10.0.140.197",
            "public_ip": "44.206.222.68",
            "subnet_id": "subnet-0f532078ad6bf5da6",
            "tags": {
              "Name": "falcon-lab-multicloud-us-east-1b"
            },
            "tags_all": {
              "Name": "falcon-lab-multicloud-us-east-1b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.this",
            "module.vpc.random_string.this",
            "random_string.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07fe85b7fd8cf5a33",
            "connectivity_type": "public",
            "id": "nat-021ff6f8d8692225f",
            "network_interface_id": "eni-0a437570d59039410",
            "private_ip": "10.0.169.57",
            "public_ip": "52.73.202.111",
            "subnet_id": "subnet-0fb88d587dfee1a74",
            "tags": {
              "Name": "falcon-lab-multicloud-us-east-1c"
            },
            "tags_all": {
              "Name": "falcon-lab-multicloud-us-east-1c"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.this",
            "module.vpc.random_string.this",
            "random_string.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509472714099:route-table/rtb-0d4a1e7a635f469c3",
            "id": "rtb-0d4a1e7a635f469c3",
            "owner_id": "509472714099",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e473739113631007",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "falcon-lab-multicloud-private-us-east-1a"
            },
            "tags_all": {
              "Name": "falcon-lab-multicloud-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-074858d843f3edb9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.this",
            "module.vpc.random_string.this",
            "random_string.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509472714099:route-table/rtb-0b258cc9e8d9eccd5",
            "id": "rtb-0b258cc9e8d9eccd5",
            "owner_id": "509472714099",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c8a154c2ccdc9f4c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "falcon-lab-multicloud-private-us-east-1b"
            },
            "tags_all": {
              "Name": "falcon-lab-multicloud-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-074858d843f3edb9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.this",
            "module.vpc.random_string.this",
            "random_string.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509472714099:route-table/rtb-05b4daac4a3f2aaad",
            "id": "rtb-05b4daac4a3f2aaad",
            "owner_id": "509472714099",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-021ff6f8d8692225f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "falcon-lab-multicloud-private-us-east-1c"
            },
            "tags_all": {
              "Name": "falcon-lab-multicloud-private-us-east-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-074858d843f3edb9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.this",
            "module.vpc.random_string.this",
            "random_string.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509472714099:route-table/rtb-09889a4355c941ee5",
            "id": "rtb-09889a4355c941ee5",
            "owner_id": "509472714099",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-093955d034488355d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "falcon-lab-multicloud-public"
            },
            "tags_all": {
              "Name": "falcon-lab-multicloud-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-074858d843f3edb9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.random_string.this",
            "random_string.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9384549c5d1f624",
            "route_table_id": "rtb-0d4a1e7a635f469c3",
            "subnet_id": "subnet-0ed91794c96a13317"
          },
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.this",
            "module.vpc.random_string.this",
            "random_string.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddf2288386a19772",
            "route_table_id": "rtb-0b258cc9e8d9eccd5",
            "subnet_id": "subnet-02b71c94021bcf54c"
          },
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.this",
            "module.vpc.random_string.this",
            "random_string.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c097eb80301ba573",
            "route_table_id": "rtb-05b4daac4a3f2aaad",
            "subnet_id": "subnet-06d3a7b36223bd21f"
          },
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.this",
            "module.vpc.random_string.this",
            "random_string.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d1e9077d52c6779",
            "route_table_id": "rtb-09889a4355c941ee5",
            "subnet_id": "subnet-0444f4fcd4f309023"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.this",
            "module.vpc.random_string.this",
            "random_string.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02acab27b36b31d66",
            "route_table_id": "rtb-09889a4355c941ee5",
            "subnet_id": "subnet-0f532078ad6bf5da6"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.this",
            "module.vpc.random_string.this",
            "random_string.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb10e95e9486de17",
            "route_table_id": "rtb-09889a4355c941ee5",
            "subnet_id": "subnet-0fb88d587dfee1a74"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.this",
            "module.vpc.random_string.this",
            "random_string.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509472714099:subnet/subnet-0ed91794c96a13317",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed91794c96a13317",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509472714099",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "falcon-lab-multicloud-private-us-east-1a",
              "Tier": "private",
              "kubernetes.io/cluster/falcon-lab-multicloud": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "falcon-lab-multicloud-private-us-east-1a",
              "Tier": "private",
              "kubernetes.io/cluster/falcon-lab-multicloud": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-074858d843f3edb9d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.this",
            "module.vpc.random_string.this",
            "random_string.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509472714099:subnet/subnet-02b71c94021bcf54c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b71c94021bcf54c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509472714099",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "falcon-lab-multicloud-private-us-east-1b",
              "Tier": "private",
              "kubernetes.io/cluster/falcon-lab-multicloud": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "falcon-lab-multicloud-private-us-east-1b",
              "Tier": "private",
              "kubernetes.io/cluster/falcon-lab-multicloud": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-074858d843f3edb9d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.this",
            "module.vpc.random_string.this",
            "random_string.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509472714099:subnet/subnet-06d3a7b36223bd21f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d3a7b36223bd21f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509472714099",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "falcon-lab-multicloud-private-us-east-1c",
              "Tier": "private",
              "kubernetes.io/cluster/falcon-lab-multicloud": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "falcon-lab-multicloud-private-us-east-1c",
              "Tier": "private",
              "kubernetes.io/cluster/falcon-lab-multicloud": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-074858d843f3edb9d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.this",
            "module.vpc.random_string.this",
            "random_string.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509472714099:subnet/subnet-0444f4fcd4f309023",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0444f4fcd4f309023",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "509472714099",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "falcon-lab-multicloud-public-us-east-1a",
              "Tier": "public",
              "kubernetes.io/cluster/falcon-lab-multicloud": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "falcon-lab-multicloud-public-us-east-1a",
              "Tier": "public",
              "kubernetes.io/cluster/falcon-lab-multicloud": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-074858d843f3edb9d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.this",
            "module.vpc.random_string.this",
            "random_string.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509472714099:subnet/subnet-0f532078ad6bf5da6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.128.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f532078ad6bf5da6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "509472714099",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "falcon-lab-multicloud-public-us-east-1b",
              "Tier": "public",
              "kubernetes.io/cluster/falcon-lab-multicloud": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "falcon-lab-multicloud-public-us-east-1b",
              "Tier": "public",
              "kubernetes.io/cluster/falcon-lab-multicloud": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-074858d843f3edb9d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.this",
            "module.vpc.random_string.this",
            "random_string.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509472714099:subnet/subnet-0fb88d587dfee1a74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.160.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb88d587dfee1a74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "509472714099",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "falcon-lab-multicloud-public-us-east-1c",
              "Tier": "public",
              "kubernetes.io/cluster/falcon-lab-multicloud": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "falcon-lab-multicloud-public-us-east-1c",
              "Tier": "public",
              "kubernetes.io/cluster/falcon-lab-multicloud": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-074858d843f3edb9d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.this",
            "module.vpc.random_string.this",
            "random_string.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509472714099:vpc/vpc-074858d843f3edb9d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0025dff3c03a21a3e",
            "default_route_table_id": "rtb-07b2626e5dc02e3c2",
            "default_security_group_id": "sg-0e9c31041e34ad16e",
            "dhcp_options_id": "dopt-f7155a8c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-074858d843f3edb9d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07b2626e5dc02e3c2",
            "owner_id": "509472714099",
            "tags": {
              "Name": "falcon-lab-multicloud"
            },
            "tags_all": {
              "Name": "falcon-lab-multicloud"
            }
          },
          "dependencies": [
            "module.vpc.random_string.this",
            "random_string.this"
          ]
        }
      ]
    }
  ]
}